kubernetes/environments/prod/traefik-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-sunbadev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-sunbadev
  template:
    metadata:
      labels:
        app: traefik-sunbadev
    spec:
      serviceAccountName: default
      containers:
        - name: traefik
          image: traefik:v2.10
          args:
            - --api=true
            - --providers.kubernetesingress=true
            - --entrypoints.web.address=:80
            - --entrypoints.websecure.address=:443
            - --providers.kubernetesingress.ingressclass=traefik-sunbadev-prod
          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-sunbadev
spec:
  type: LoadBalancer
  selector:
    app: traefik-sunbadev
  ports:
    - name: web
      port: 80
      targetPort: 80
    - name: websecure
      port: 443
      targetPort: 443
